--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DTM Studio — Precision made simple</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="stylesheet" href="assets/style.css?v=8">
+  <link rel="stylesheet" href="assets/style.css?v=9">
   <link rel="canonical" href="https://dtm-studio.org/">
 
 
@@ -290,8 +290,8 @@ X26.670000 Z-9.970502
         <h3>Optimus LDT Support</h3>
         <p>Hybrid cutting workflow support for laser-assisted diamond turning setups.</p>
       </div>
-    </div>
-	
+	</div>
+  </div>
 </section>
 
 
@@ -685,18 +685,27 @@ X26.670000 Z-9.970502
 </footer>
 
 
-<!-- LIGHTBOX -->
+<!-- LIGHTBOX (Lightbox2 needs jQuery) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
 <script>
-  lightbox.option({
-    resizeDuration: 200,
-    fadeDuration: 200,
-    imageFadeDuration: 200,
-    wrapAround: true,
-    alwaysShowNavOnTouchDevices: true
-  });
+document.addEventListener("DOMContentLoaded", function () {
+  if (window.lightbox) {
+    lightbox.option({
+      resizeDuration: 200,
+      fadeDuration: 200,
+      imageFadeDuration: 200,
+      wrapAround: true,
+      alwaysShowNavOnTouchDevices: true,
+      disableScrolling: true
+    });
+  }
+});
 </script>
+
+
 
 <script>
 (function(){
