Add privacy & cookie policy pages + footer links

--- a/index.html
+++ b/index.html
@@ -543,6 +543,14 @@ X26.670000 Z-9.970502
 		 alt="GitHub Logo" />
 
 	  <span>DTM Studio on GitHub</span>
+	  
+		<span class="divider">•</span>
+	<a href="/privacy/" class="footer-legal">Privacy Policy</a>
+
+	<span class="divider">•</span>
+	<a href="/cookies/" class="footer-legal">Cookie Policy</a>
+
+	  
 	</a>
 
 
