Update privacy html

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -29,7 +29,7 @@
         <p>
           DTM Studio (independent project)<br>
           Location: Riga, Latvia (EU)<br>
-          Contact: use the email address published on this website.
+          Contact: info@dtm-studio.org
         </p>
 
         <h3 style="margin-top:16px">2. What data we collect</h3>
@@ -82,6 +82,13 @@
         <p class="small" style="margin-top:10px">
           These providers may process limited technical data strictly to deliver and protect the website.
         </p>
+		
+		<p style="margin-top:10px">
+		  We may also load third-party resources (for example, libraries from public CDNs such as cdnjs.cloudflare.com or
+		  externally hosted images/icons). When your browser requests these assets, the provider may receive technical request
+		  data such as IP address and User-Agent in order to deliver the content.
+		</p>
+
 
         <h3 style="margin-top:16px">6. International transfers</h3>
         <p>
@@ -90,19 +97,21 @@
         </p>
 
         <h3 style="margin-top:16px">7. Data retention</h3>
-        <ul>
-          <li><strong>Emails</strong>: kept as long as necessary to handle the conversation and for reasonable record-keeping</li>
-          <li><strong>Server/CDN logs</strong>: retained for a limited period for security and troubleshooting, depending on provider settings</li>
-        </ul>
+		 <ul>
+		  <li><strong>Emails</strong>: kept as long as necessary to handle the conversation and for reasonable record-keeping (typically up to 24 months).</li>
+		  <li><strong>Server/CDN logs</strong>: retained for a limited period for security and troubleshooting (typically 30–90 days), depending on provider settings.</li>
+		</ul>
+
 
         <h3 style="margin-top:16px">8. Your rights</h3>
         <p>
           Depending on your location, you may have rights to access, correct, delete, restrict, or object to processing of your
           personal data, and to lodge a complaint with your local data protection authority.
         </p>
-        <p>
-          To exercise rights, contact us using the email address published on this website.
-        </p>
+		<p>
+		  To exercise rights, contact us at <a href="mailto:info@dtm-studio.org">info@dtm-studio.org</a>.
+		</p>
+
 
         <h3 style="margin-top:16px">9. Cookies</h3>
         <p>
